# bitnet-tt

./: .gitignore  INTEGRATION_GUIDE.md  LICENSE  MEMO.md  README.md  TODO.md  TT_OPTIMIZATIONS_README.md  TT_TRANSFORMERS_ANALYSIS.md  analyze_zero_tiles.py  bench_accuracy.py  bench_accuracy_multi.py  bench_batch32.py  bench_bfp4.py  bench_tps.py  bench_vs_bitnetcpp.py  bench_vs_hf_noquant.py  main.py  pyproject.toml  simple_test.py  test_batch32.py  test_batch32_generator.py  test_cos_sin_lookup.py  test_ffn_stages.py  test_generic_op_ternary.py  test_layer_compare.py  test_lofi.py  test_matmul_only.py  test_passthrough.py  test_perf.py  test_pt_attn.py  test_pt_generate.py  test_pt_logits.py  test_ternary_bias_diag.py  test_ternary_matmul_hw.py  test_unpack_only.py  trace_test.py
.omc/: prd.json
docs/: STATUS.md  bfp8_lm_head_multi_prompt.md  plan_attention_core_range_split.md  plan_sdpa_kernel_alignment.md  session_10_phase2_closure.md  session_14_optimization_ceiling.md  session_3_ceiling_analysis.md  session_4_pcc_ceiling.md  session_5_correct_attribution.md  session_6_int8_act.md  session_7_baseline_reconciled.md  session_7_phase_0p5_gate_decision.md  session_8_localization_design.md  session_8_rfe_ranking.md
examples/: check_batch32_greedy_parity.py  debug_compare.py  debug_fresh_tensor.py  debug_full_compare.py  debug_layer23.py  debug_layer23_detailed.py  debug_layer23_full.py  debug_memory_alias.py  debug_paged_update.py  debug_pos_tensor.py  debug_pos_tensor_layers.py  debug_sync_layers.py  debug_update_method.py  demo.py  profile_decode.py  (+1 more)
(+44 files in other folders)
